<resources>
    <string name="app_name">NewsNow</string>
    <string name="ch_subscription">Choose Subscription</string>
    <string name="ch_plan">Choose plan to have an access on desktop,tablet and mobile</string>
    <string name="standard">Standard\n $16/month </string>
    <string name="bussiness">Bussiness\n $32/month </string>
    <string name="premium">Premium\n $64/month </string>
    <string name="personalalert">Personalize Your\n Alert</string>
    <string name="stayknow">Stay in the Know. Get notifications\n when important news unfold</string>
    <string name="notify1">Breaking\nNews\n1-2 in Day</string>
    <string name="notify2">Only top\n stories\n3-6 in day</string>
    <string name="notify3">Important\nNews\nmore 10</string>
    <string name="notify4">Turn on Notifications</string>
    <string name="notify5">Notification previows will be shown whether the\n phone is locked or unlocked. Show the alert on the lock\n Screen in the notification center</string>
    <string name="step1">STEP 1 OF 5</string>
    <string name="step2">STEP 2 OF 5</string>
    <string name="step3">STEP 3 OF 5</string>
    <string name="step4">STEP 4 OF 5</string>
    <string name="step5">STEP 5 OF 5</string>
    <string name="chooseLoca">Choose\n Your Location </string>
    <string name="choseLocaTip">The local weather and news \n show for your country</string>
    <string name="currentLoc">Your Location</string>
    <string name="chooseTopic">Choose Topics</string>
    <string name="chooseTopicTip">Add topics to create your own personal news feed</string>
    <string name="addTag">Add Tags to Your\n Personal Taglist</string>
    <string name="addTagTip">Dont miss the actual news about the\n stuff you love the most</string>
</resources>
