<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.YourAlert">

    <Button
        android:id="@+id/notiBtn1"
        android:layout_width="97dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonshape"
        android:drawableTop="@drawable/checkbox"
        android:text="@string/notify1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stayTxt" />

    <Button
        android:id="@+id/notiBtn2"
        android:layout_width="97dp"
        android:layout_height="145dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonshape"
        android:drawableTop="@drawable/checkbox"
        android:text="@string/notify2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stayTxt" />

    <Button
        android:id="@+id/notiBtn3"
        android:layout_width="97dp"
        android:layout_height="145dp"
        android:layout_marginStart="268dp"
        android:layout_marginLeft="268dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonshape"
        android:drawableTop="@drawable/checkbox"
        android:text="@string/notify3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stayTxt" />

    <TextView
        android:id="@+id/personalTxt"
        android:layout_width="250dp"
        android:layout_height="81dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:layout_marginBottom="373dp"
        android:text="@string/personalalert"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:textColor="@android:color/black" />

    <include layout="@layout/head_toolbar"/>

    <TextView
        android:id="@+id/stayTxt"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:text="@string/stayknow"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalTxt" />

    <View
        android:id="@+id/view"
        android:background="@drawable/buttonshape"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notiBtn1" />

    <Switch
        android:id="@+id/notifySwitch"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/notiBtn3"
        app:layout_constraintVertical_bias="0.823" />

    <TextView
        android:id="@+id/notify4"
        android:layout_width="221dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/notify4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/notifySwitch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/notiBtn1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/notify5"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="9dp"
        android:text="@string/notify5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</android.support.constraint.ConstraintLayout>